syntax = "proto3";

package greet.v1;

message GreetRequest {
  string name = 1;
}

message GreetResponse {
  string greeting = 1;
}

service GreetService {
  rpc Greet(GreetRequest) returns (GreetResponse) {}
  rpc GreetServerStream(GreetRequest) returns (stream GreetResponse) {}
  rpc GreetClientStream(stream GreetRequest) returns (GreetResponse) {}
  rpc GreetBiStream(stream GreetRequest) returns (stream GreetResponse) {}
}

